--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -10,7 +10,7 @@ body {
     
     menu {
         grid-column: 1;
-        grid-row: 2;
+        grid-row: 1/4;
     }
     
     main {
@@ -19,7 +19,7 @@ body {
     }
     
     footer {
-        grid-column: 1/6;
+        grid-column: 2/6;
         grid-row: 3;
     }
 }
